Adding iCON integration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -791,6 +791,8 @@ build.json @home-assistant/supervisor
 /tests/components/nextdns/ @bieniu
 /homeassistant/components/nfandroidtv/ @tkdrob
 /tests/components/nfandroidtv/ @tkdrob
+/homeassistant/components/ngbs_icon/ @sethyx
+/tests/components/ngbs_icon/ @sethyx
 /homeassistant/components/nibe_heatpump/ @elupus
 /tests/components/nibe_heatpump/ @elupus
 /homeassistant/components/nightscout/ @marciogranzotto
